<resources>
    <string name="app_name">Clinician</string>
    <string name="company_logo">Company Logo</string>
    <string name="alert_positive_button_text">Yes</string>
    <string name="alert_negative_button_text">No</string>
    <string name="alert_positive_button_OK_text">OK</string>
    <string name="no_internet">The network connection is lost</string>
    <string name="something_went_wrong">Something went wrong please try again</string>
    <string name="title_activity_authenticate">AuthenticateActivity</string>
    <string name="sign_in_fragment_label">Sign In</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="forgot_password_fragment_label">Forgot Password</string>
    <string name="sign_up_fragment_label">Sign Up</string>
    <string name="activity_main_label">MainActivity</string>
    <string name="consultation_list_label">Home</string>
    <string name="terms_and_conditions_label">Terms &amp; Conditions</string>
    <string name="accessibility_home_help">Help</string>
    <string name="accessibility_home_notification">Notification Alert</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="invalid_email_msg">Please enter your email address in the format: welysn@gmail.com</string>
    <string name="login_failed_msg">No active account found with the given credentials</string>
    <string name="navigate_previous_screen">Navigate to previous screen</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_internet_title">We couldn’t connect</string>
    <string name="no_internet_message">Please make sure you’re connected to the internet and then retry</string>
    <string name="log_in">Log in</string>
    <string name="welcome_heading">Welcome to Lysn for Mental \nHealth Professionals</string>
    <string name="welcome_subheading">Looking for our &lt;u>Mental Health Support&lt;/u> application?</string>
    <string name="register_with_lysn">Register with Lysn</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="cancel_consultation">Cancel Consultation</string>
    <string name="join_consultation">Join Consultation</string>
    <string name="exit_consultation">Exit consultation</string>
    <string name="exit_consultation_message">You can rejoin the consultation after exiting</string>
    <string name="review">Review</string>
    <string name="accept_terms">Accept terms</string>
    <string name="review_terms_and_conditions">Review Terms &amp; Conditions</string>
    <string name="terms_Condition_text">"These Terms of Use govern your use of the welysn.com website (‘the Website’) which is owned and operated by Lysn Pty Ltd (ACN 614 950 131) (‘we’, ‘us’, ‘our’, ‘Lysn’). By accessing and using the Website or by clicking ‘I Accept’ when signing up for a user account on the Website, you agree to be bound by, and responsible for complying with, these Terms of Use.

 We may change these Terms of Use from time to time. Your use of the Website following any such change to the Terms of Use will confirm your acceptance of these changes.

Nature of Service
The service offered by Lysn is not an acute service. In cases of emergency, please contact public emergency services immediately by dialling “000” by telephone. We are not responsible for any loss, damage, cost, expense, action, claim, demand, proceeding, injury or liability suffered by any person as a result of a failure by that person or any other person to contact public emergency services.

If you are thinking about suicide, if you are considering taking actions that may cause harm to you or to others, if you feel that you or any other person may be in any danger, or if you have any medical emergency, you must immediately “000” and notify the relevant authorities. You can also contact Lifeline 24 hours a day on 13 11 14 or alternatively obtain resources from Lifeline on www.lifeline.org.au

states the reason for your concern/s; and
clearly identifies the content by providing:
a description of it; and
a hyperlink to the specific page (if applicable).

20. Confidentiality
If you receive or encounter any information which a reasonable person would consider to be confidential in nature, you agree to contact us immediately at support@welysn.com.

21. Applicable Law
The Website is controlled from our offices in New South Wales. These Terms and Use will be governed by and construed in accordance with the laws of New South Wales.

You irrevocably and unconditionally submit to the exclusive jurisdiction of the courts of New South Wales.

If any provision of these Terms of Use is found to be invalid or unenforceable by a court of law, such invalidity or unenforceability will not affect the remainder of these Terms of Use which will continue in full force and effect.

22. Contact
If you have any questions or concerns regarding these Terms of Use please contact us at support@welysn.com"
    </string>
    <string name="terms_Condition_text2">These Terms of Use govern your use of the welysn.com website (‘the Website’) which is owned and operated by Lysn Pty Ltd (ACN 614 950 131) (‘we’, ‘us’, ‘our’, ‘Lysn’). By accessing and using the Website or by clicking ‘I Accept’ when signing up for a user account on the Website, you agree to be bound by, and responsible for complying with, these Terms of Use.




            We may change these Terms of Use from time to time. Your use of the Website following any such change to the Terms of Use will confirm your acceptance of these changes.




            Nature of Service

            The service offered by Lysn is not an acute service. In cases of emergency, please contact public emergency services immediately by dialling “000” by telephone. We are not responsible for any loss, damage, cost, expense, action, claim, demand, proceeding, injury or liability suffered by any person as a result of a failure by that person or any other person to contact public emergency services.




            If you are thinking about suicide, if you are considering taking actions that may cause harm to you or to others, if you feel that you or any other person may be in any danger, or if you have any medical emergency, you must immediately “000” and notify the relevant authorities. You can also contact Lifeline 24 hours a day on 13 11 14 or alternatively obtain resources from Lifeline on www.lifeline.org.au




            states the reason for your concern/s; and

            clearly identifies the content by providing:

            a description of it; and

            a hyperlink to the specific page (if applicable).

            20. Confidentiality

            If you receive or encounter any information which a reasonable person would consider to be confidential in nature, you agree to contact us immediately at support@welysn.com.




            21. Applicable Law

            The Website is controlled from our offices in New South Wales. These Terms and Use will be governed by and construed in accordance with the laws of New South Wales.




            You irrevocably and unconditionally submit to the exclusive jurisdiction of the courts of New South Wales.




            If any provision of these Terms of Use is found to be invalid or unenforceable by a court of law, such invalidity or unenforceability will not affect the remainder of these Terms of Use which will continue in full force and effect.




            22. Contact

            If you have any questions or concerns regarding these Terms of Use please contact us at support@welysn.com
</string>
    <string name="consultation_ready_to_join">Consultation Ready to Join</string>
    <string name="upcoming_consultations">Upcoming Consultations</string>
    <string name="min_txt">Min</string>
    <string name="title_activity_main_activityd">MainActivityd</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="consultation_starts_in_minute_singular">STARTS IN %1$d MINUTE</string>
    <string name="consultation_starts_in_minute_plural">STARTS IN %1$d MINUTES</string>
    <string name="min_text">\u0020minute video consultation</string>
    <string name="message_join_room">Unable to join session</string>
    <string name="consultation_details">Consultation Details</string>
    <string name="keep_text">Keep</string>
    <string name="cancel_text">Cancel</string>
    <string name="cancel_consultation_description">Your client will be notified.\nNote: Alternatively, you can reschedule via welysn.com</string>
    <string name="never_mind_text">Never mind</string>
    <string name="confirm_cancellation_text">Confirm cancellation</string>
    <string name="exit_text">Exit</string>
    <string name="view_profile">View Profile</string>
    <string name="cancel_consultation_success_message">Consultation successfully cancelled</string>
    <string name="cancelled_text">CANCELLED</string>
    <string name="book_client_again">Book Client Again</string>
    <string name="empty_consultation_list_message">No consultations for you</string>
    <string name="minutes_phone_consultation">"minute phone consultation"</string>
    <string name="minutes_face_to_consultation">minute face to face consultation</string>
    <string name="minutes_video_consultation">minute video consultation</string>
    <string name="phone_text">phone</string>
    <string name="f2f_text">f2f</string>
    <string name="video_text">video</string>
    <string name="permissions_needed">Need Camera Permission</string>
    <string name="permission_message">You have forcefully denied some of the required permissions  for this action. Please open settings, go to permissions and allow them.</string>
    <string name="permission_required">Permission Required</string>
    <string name="settings_text">Settings</string>
    <string name="consultation_started_message">%1$d MINUTE LEFT</string>
    <string name="finished">FINISHED</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="starts_in_minute_singular">STARTS IN %1$d MINUTE</string>
    <string name="starts_in_minute_plural">STARTS IN %1$d MINUTES</string>
    <string name="clinet_next_to_kin">Next of Kin</string>
    <string name="client_info">Client Info</string>
    <string name="rejoin_consultation">Rejoin Consultation</string>
    <string name="end_consultation">End Consultation</string>
    <string name="switch_camera">Switch camera</string>
    <string name="help_text">Help</string>
    <string name="type_message">Send a message</string>
    <string name="you_text">You</string>
    <string name="logout_text">Log Out</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancellation_policy_text">Cancellation Policy</string>
    <string name="reschedule_consultation_text">Want to reschedule?</string>
    <string name="logout_user_text">Logout user</string>
    <string name="notifications_text">Notifications</string>
    <string name="receive_email_notification">Receive email notifications</string>
    <string name="receive_sms_notification">Receive SMS notifications</string>
    <string name="account_support_text">Account Support</string>
    <string name="account_description_text">We may need to send you messages regarding your account. For your security you cannot disable these notifications and we may contact you by phone if needed</string>
    <string name="save_text">Save</string>
    <string name="notification_setting_change_success_message">Settings updated successfully </string>
    <string name="timezone_text">Timezone</string>
</resources>