<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/WelcomeFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.lysn.clinician.ui.welcome.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_WelcomeFragment_to_SignInFragment"
            app:destination="@id/SignInFragment" />

        <action
            android:id="@+id/action_WelcomeFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignInFragment"
        android:name="com.lysn.clinician.ui.signin.SignInFragment"
        android:label="@string/sign_in_fragment_label"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_SignInFragment_to_ForgotPasswordFragment"
            app:destination="@id/ForgotPasswordFragment" />
        <action
            android:id="@+id/action_SignInFragment_to_TermsAndConditionFragment"
            app:destination="@id/TermsAndConditionFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/ForgotPasswordFragment"
        android:label="@string/forgot_password_fragment_label"
        android:name="com.lysn.clinician.ui.forgot.ForgotPasswordFragment"
        tools:layout="@layout/fragment_forgot_password">
    </fragment>
    <fragment
        android:id="@+id/SignUpFragment"
        android:label="@string/sign_up_fragment_label"
        android:name="com.lysn.clinician.ui.signup.SignUpFragment"
        tools:layout="@layout/fragment_sign_up">
    </fragment>
    <fragment
        android:id="@+id/TermsAndConditionFragment"
        android:label="@string/terms_and_conditions_label"
        android:name="com.lysn.clinician.ui.terms_condition.TermsAndConditionFragment"
        tools:layout="@layout/fragment_terms_and_condition">
    </fragment>
</navigation>