<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.welcome.WelcomeFragment">

    <data>
        <variable name="clickHandler" type="com.lysn.clinician.ui.welcome.WelcomeFragment.WelcomeClickHandler"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/welcome_screen_logo"
            app:layout_constraintBottom_toTopOf="@+id/tv_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_heading"
            style="@style/textHeading"
            android:layout_marginBottom="@dimen/dp45"
            android:gravity="center"
            android:text="@string/welcome_heading"
            app:layout_constraintBottom_toTopOf="@+id/btn_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_in"
            style="@style/roundedButton"
            android:onClick="@{()->clickHandler.onLoginButtonClicked()}"
            android:text="@string/log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/roundCornerTextButton"
            android:layout_marginTop="@dimen/dp10"
            android:onClick="@{()->clickHandler.onRegisterButtonClicked()}"
            android:text="@string/register_with_lysn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/horizontalDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subheading"
            style="@style/IBMPLEX.17sp"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp45"
            android:gravity="center"
            android:text="@string/welcome_subheading"
            android:textColor="@color/blueTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>