<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/gray_surface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/bottom_sheet_dialog_color"
        app:layout_constraintBottom_toTopOf="@+id/txt_switch_camera"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_switch_camera"
        style="@style/IBMPLEX.15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_switch_camera"
        android:drawablePadding="@dimen/dp16"
        android:padding="@dimen/dp16"
        android:text="@string/switch_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_help"
         />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_help"
        style="@style/IBMPLEX.15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_help"
        android:drawablePadding="@dimen/dp16"
        android:padding="@dimen/dp16"
        android:text="@string/help_text"
        app:layout_constraintBottom_toTopOf="@+id/txt_cancel"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_cancel"
        style="@style/IBMPLEX.15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_close"
        android:drawablePadding="@dimen/dp16"
        android:padding="@dimen/dp16"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>